# mestrado-ipt-esp32-fabric

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  https_app.c  https_app.h  main.c  main_app.h  main_test.c  main_test.h  sysconfig.h  tasks_common.h  version.h  wifi_app.c  wifi_app.h
main/api/: fw_update.c  fw_update.h  https_app.c  https_app.h  wifi_app.c  wifi_app.h
